# unpacking

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  build.rs  docker-compose.yaml  fly.toml  openapi.json
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  elm.yml  rust.yml
frontend/: .gitignore  README.md  elm-land.json  elm.json  package.json
frontend/client/.openapi-generator/: FILES
frontend/client/src/: Api.elm
frontend/client/src/Api/: Data.elm
frontend/client/src/Api/Request/: Default.elm
frontend/public/: index.html  styles.css
frontend/review/: elm.json
frontend/review/src/: ReviewConfig.elm
frontend/src/: Auth.elm  Common.elm  Effect.elm  Problem.elm  Shared.elm  Storage.elm  View.elm  interop.js
frontend/src/Domain/: Session.elm
frontend/src/Forms/: Fields.elm  SignInForm.elm  SnippetForm.elm  TermForm.elm  UserForm.elm  Validators.elm
frontend/src/Layouts/: Layout.elm
frontend/src/Pages/: Home_.elm  SignIn.elm  SignOut.elm  Snippets.elm  Stats.elm  Terms.elm  Users.elm
frontend/src/Pages/Snippets/: New.elm
frontend/src/Pages/Terms/: New.elm
frontend/src/Pages/Users/: New.elm
frontend/src/Shared/: Model.elm  Msg.elm
frontend/src/Translations/: Buttons.elm  Dialogs.elm  Forms.elm  Labels.elm  Titles.elm
frontend/src/UI/: Button.elm  Card.elm  Checkbox.elm  ColorPalette.elm  Dialog.elm  Dimensions.elm  Dropdown.elm  Header.elm  Layout.elm  Link.elm  TabBar.elm  TextField.elm
frontend/translations/: translations.en.json  translations.pt.json
migrations/2023-07-09-171432_create_users/: down.sql  up.sql
migrations/2023-07-09-171510_create_passwords/: down.sql  up.sql
migrations/2023-07-09-171901_create_terms/: down.sql  up.sql
migrations/2023-07-09-174756_create_snippets/: down.sql  up.sql
migrations/2023-07-09-174773_create_terms_snippets/: down.sql  up.sql
migrations/2023-07-09-175016_create_authors/: up.sql
migrations/2023-07-09-175844_create_authors_snippets/: down.sql  up.sql
openapi-cli/: elm.yaml  rust.yaml  shared.yaml
src/: authentication.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs
src/db/: authors.rs  migrations.rs  mod.rs  snippets.rs  terms.rs  users.rs
src/resources/: auth.rs  author.rs  i18n.rs  mod.rs  snippet.rs  term.rs  translation.rs  user.rs  validation.rs
tests/client/: .openapi-generator-ignore  Cargo.toml
tests/client/.openapi-generator/: FILES
tests/client/src/apis/: configuration.rs  default_api.rs
tests/client/src/models/: author_response.rs  buttons.rs  create_snippet.rs  create_term.rs  create_token.rs  create_user.rs  dialogs.rs  forms.rs  labels.rs  media.rs  media_stats_response.rs  mod.rs  role.rs  snippet_response.rs  snippet_search_response.rs  snippet_term_response.rs  stats_response.rs  term_graph_response.rs  term_response.rs  titles.rs  token_response.rs  translation.rs  update_snippet.rs  update_term.rs  update_user.rs  user_response.rs
