[package]
name = "unpacking"
version = "0.1.0"
edition = "2021"

[dependencies]
accept-language = "3.1.0"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
cron = "0.13.0"
derive-getters = "0.5.0"
diesel = { version = "2.2.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
gotham = "0.7.4"
gotham_derive = "0.7.1"
gotham_middleware_diesel = "0.5.1"
gotham_restful = { version = "0.9.0", default-features = false, features = ["full"] }
gotham_restful_derive = "0.9.0"
jsonwebtoken = "9.3.0"
language-tags = "0.3.2"
log = "0.4.22"
openapi_type = { version = "0.5.0", features = ["chrono", "uuid"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.215"
serde_json = "1.0.132"
serde_derive = "1.0.210"
tokio = "1.41.1"
url = "2.5.4"
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
async-trait = "0.1.83"
cucumber = { version = "0.21.1", features = ["output-junit"] }
fake = { version = "3.0.1", features = ["derive", "uuid", "chrono"] }
image = { version = "0.25.5", features = ["png"] }
mime = "0.3.17"
openapi = { path = "./tests/client" }
pixelmatch = "0.1.0"
proptest = "1.5.0"
rand = "0.8.5"
temp-env = "0.3.6"
thirtyfour = { version = "0.35.0"}

[build-dependencies]
serde = "1.0.215"
serde_derive = "1.0.210"
serde_json = "1.0.132"
json_typegen_shared = { version = "0.7.0", default-features = false, features = ["local-samples"] }

